Adjusted gitignore to reflect folder name changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ __pycache__/
 
 transcripts/*.csv
 working-csvs/*.csv
-data collection/*.csv
+data-collection/*.csv
+old-data-collection/*.csv
 hansen-replication/*.csv
